Update fix IE sur .col-noalign
Transformation d'un table-cell en flottant pour vieux IE.

--- a/sass/rocssti-fr.scss
+++ b/sass/rocssti-fr.scss
@@ -988,7 +988,9 @@ select:focus:required:valid {
 }
 
 .ie7 .col,
-.ie6 .col {
+.ie7 .col-noalign,
+.ie6 .col,
+.ie6 .col-noalign {
   float: left;
 }
 .ie7 .row,
